<resources>
    <string name="app_name">温湿度检测</string>

    <!-- Strings related to login -->

    <string name="error_invalid_password">密码太短嘞</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">账号或密码不能为空</string>
    <string name="permission_rationale">"账号格式不正确"</string>
    <string name="error_invalid_username">账号不存在</string>
    <string name="username">账号(๑•ᴗ•๑)</string>
    <string name="password">密码(/▽╲)</string>
    <string name="sign_in">注册</string>
    <string name="log_in">登录</string>
    <string name="textsizeX">12</string>
    <string name="textsize">15</string>
    <string name="inputusername">请输入账号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="register">注册</string>
    <string name="author"><font size="2" >by@xblydxj</font></string>
    <string name="idnum">请输入id号进行搜索</string>
</resources>
