<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg8"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputusername"
            />
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/inputpassword"
            />
        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/et_newpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmpassword"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
        <Button
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
    </LinearLayout>

</LinearLayout>
